correção de Links de imagens

--- a/css/style.css
+++ b/css/style.css
@@ -106,3 +106,9 @@ h2{
    figure.foto-fale {
     margin-left: 2%;
    }
+
+   .footer {
+   color: #fff;
+    font-size: 7px;
+    margin-left: 2%;
+   }
