updating H3 and skiil images.

--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ h2{
         font-size: 30px;
         margin-left: 2%;
         font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-
+        font-weight: bold;
     }
     figure.foto-Habilidades img{
         width: 5%;    
