--- a/css/style.css
+++ b/css/style.css
@@ -46,8 +46,7 @@ h2{
         color: white;
         font-size: 30px;
         margin-left: 2%;
-        font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-        
+        font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;        
     }
     *{
         margin: 10 auto;
@@ -88,10 +87,9 @@ h2{
         font-size: 20px;
         font-family: 'Times New Roman', Times, serif;
         margin-left: 2%;
-        width: auto;
-       
+        width: auto;       
     }    
-    h3{ 
+h3{ 
       color:white;
       text-align: left;
         font-size: 30px;
@@ -99,21 +97,27 @@ h2{
         font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         font-weight: bold;
     }
-    figure.foto-Habilidades img{
+    .foto-Habilidades img {
        /*width: 4%;    
      height: 4%;*/
      position: relative;
      margin-left: 2%;
      bottom: 20Px;
-     left: -35px;     
-        
+     left: -35px;         
     }
-   figure.foto-fale {
-    margin-left: 2%;
-   }
+h4 {
+    color:white;   
+    font-size: 10px;
+    margin-left: -4%;
+    font-family:Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    }
+.foto-fale{  
+ position: relative;
+ margin-left: -3%;
+ bottom: 20px;
+ left: -50px;     
+ }
 
-   .footer {
-   color: #fff;
-    font-size: 7px;
-    margin-left: 2%;
-   }
+        
+  
