--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,9 @@
-.body{
+body{
     background-image: url(http://www.vanseodesign.com/blog/wp-content/uploads/2011/10/background-3.jpg);
     background-repeat: no-repeat;
     background-size: 100%; 
     background-attachment: fixed;
-    background-color: #000;
- }
+    background-color: #000;} 
 
  .background{
     width: 430px;
