--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 
 body{
-    background-image: url(http://www.vanseodesign.com/blog/wp-content/uploads/2011/10/background-3.jpg);
+    background-image: url(Imagens/modern\futuristic\background.png);
     background-repeat: no-repeat;
     background-size: 100%; 
     background-attachment: fixed;
