Updating html and css

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 
 body{
-    background-image: url(Imagens/modern\futuristic\background.png);
+    background-image: url(Imagens/modern\futuristic\backgroun.png);
     background-repeat: no-repeat;
     background-size: 100%; 
     background-attachment: fixed;
