Updating html and css

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 
 body{
-    background-image: url(Imagens/modern\futuristic\background.png);
+    background-image: url(https://www.rbsdirect.com.br/filestore/1/8/8/5/1/6/1_0813538e551f7d9/1615881_20d292c97f24596.jpg?w=700);
     background-repeat: no-repeat;
     background-size: 100%; 
     background-attachment: fixed;
