--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 
 body{
-    background-image: url(Imagens/modern-futuristic-background.png);
+    background-image: url(https://res.cloudinary.com/practicaldev/image/fetch/s--BuPz-p40--/c_imagga_scale,f_auto,fl_progressive,h_420,q_auto,w_1000/https://dev-to-uploads.s3.amazonaws.com/uploads/articles/nphrgz8yfnjylrwfr0yl.png);
     background-repeat: no-repeat;
     background-size: 100%; 
     background-attachment: fixed;
