--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 
 body{
-    background-image: url(Imagens/future-background-img.jpg);
+    background-image: url(Imagens/future-background-img.png);
     background-repeat: no-repeat;
     background-size: 100%; 
     background-attachment: fixed;
