--- a/css/style.css
+++ b/css/style.css
@@ -32,15 +32,8 @@ h1{
     hr{
         height: 1px;
         background-color: white;
-        border-color: white;
-        
+        border-color: white;        
       }
-h2{
-        color: white;
-        font-size: 30px;
-        margin-left: 2%;
-        font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;        
-    }
     *{
         margin: 10 auto;
         padding: 0;
@@ -82,9 +75,9 @@ h2{
         margin-left: 2%;
         width: auto;       
     }    
-h3{ 
+h2, h3, h4 { 
       color:white;
-      text-align: left;
+      text-align: center;
         font-size: 30px;
         margin-left: 2%;
         font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -94,20 +87,14 @@ h3{
      position: relative;
      margin-left: 2%;
      bottom: 20Px;
-     left: -35px;         
+     left: -35;        
     }
-     h4 {
-      color:white;   
-     font-size: 30px;
-     margin-left: -4%;
-     font-family:Arial, Helvetica, sans-serif;
-     font-weight: bold;
-     }
-     .foto-fale{  
+    .foto-fale{  
      position: relative;
      margin-left: -3%;
      bottom: 0px;
-     left: 0px;     
+     left: 0px; 
+     
      }
 
         
