--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-*, 
-::before, ::after {
-    padding: 0;
-    margin: 0;
-}
-
 body{
     background-image: url(../Imagens/future-background-img.png);
     background-repeat: no-repeat;
@@ -11,91 +5,9 @@ body{
     background-attachment: fixed;
     background-color: #000;
 } 
-
- .background{
-    width: 430px;
-    height: 430px;
-    border-radius: 50%;
-    border: 10px solid #ffff;
- }
- p{
-    position: absolute;
-    bottom: 50x;
-    left: 171px;
-    z-index: 1;
-    text-align: justify;  
-    }    
-
-h1{
-     color:white; 
-     font-size: 30px;
-     margin-left: 2%;
-     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-     margin-bottom: 2px;
-     margin-top: 2px;
-    } 
-    hr{
-        height: 1px;
-        background-color: black;
-        border-color: black;        
-      }
-        #manu h{
-        background-color: rgb(37, 37, 39);
-    }
-    #menu-h ul {
-        max-width: 800px;
-        list-style: none;
-        padding: 0;
-        
-    }
-    #menu-h li{
-        display: inline;         
-    }
-    #menu-h ul li a {
-        color: #fff;       
-        padding: 10px;
-        display: inline block;
-        text-decoration: none;
-        transition: background .4s;
-    }
-        #menu-h ul li a:hover {
-        background-color: rgb(0, 0, 255);                   
-    }
-    #menu-h ul li:last-child a {
-        float: right;
-        background-color: rgb(0, 0, 255);
-    }
-    .foto-hello{
-      display: flex;
-        color:white;
-        font-size: 20px;
-        font-family: 'Times New Roman', Times, serif;
-        margin-left: 2%;
-        width: auto;       
-    }    
-h2, h3, h4 { 
-      color:white;
-      text-align: center;
-        font-size: 30px;
-        margin-left: 2%;
-        font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-        font-weight: bold;
-    }
-    
-    i
-    .Habilidades-img {
-        position: relative;
-        margin-left: -300;
-        bottom: auto;
-        left: 30px;
-              
-        
-    }
-    .social-img {  
-    display: block;
-    margin-left: auto;
-    margin-right: auto;     
-    }
-    
-        
-  
+body {
+    font-family: Raleway,sans-serif;
+    font-size: 1em;
+    color: #666
+}
+ 
