--- a/css/style.css
+++ b/css/style.css
@@ -10,4 +10,9 @@ body {
     font-size: 1em;
     color: #666
 }
- 
+#ft-perfil {
+    display: block;
+    margin: 0 auto;    
+    padding-top: 150px;
+    /* configuração da foto do perfil*/
+}
