--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
-body{
+body {
     background-color: #191970;
     background-repeat: no-repeat;
     background-size: 100%; 
     background-attachment: fixed;
-    /*background-color: #000;*/
+    
 } 
 body {
     font-family: Raleway,sans-serif;
@@ -13,29 +13,31 @@ body {
 #ft-perfil {
     display: block;
     margin: 0 auto;    
-    padding-top: 150px; 
-   
+    padding-top: 10px; 
+    border-radius: 50%; 
     /* configuração da foto do perfil*/
 }
-figure {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-inline-start: 1px;
+
+#foto-link {
+    display: flex;    
+    justify-content: center;  
+    align-items: center; 
+    padding-top: 10px;     
     /* configração dos links dos icones*/   
 }
+
+
 a {
     text-decoration: none;
     color: #666;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
-    padding-top: 10px;
+    margin-top: 5px;
     font-weight: bolder;
     /* configuração do link com meu nome abaixo da foto*/    
 }
-a:hover{
+a:hover {
     color: #fff;
     padding: 10px;
     text-decoration: underline ;
@@ -46,4 +48,4 @@ p {
     text-align: center;
     font-weight: bolder;
     /* Config. da frase entre linhas*/
-  }
+}
