--- a/css/style.css
+++ b/css/style.css
@@ -18,13 +18,21 @@ body {
     /* configuração da foto do perfil*/
 }
 
-#foto-link {
-    display: flex;    
-    justify-content: center;  
-    align-items: center; 
-    padding-top: 10px;     
-    /* configração dos links dos icones*/   
-}
+.social-icons {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+  }
+  
+  .social-icons li {
+    display: inline-block;
+    margin-right: 10px;
+  }
+  
+  .social-icons li:last-child {
+    margin-right: 0;
+  } 
 
 
 a {
